--- a/client/style.css
+++ b/client/style.css
@@ -1,6 +1,6 @@
 :root {
     --textColor: black;
-    --backgroundDefault: #edf2fb;
+    --backgroundDefault: #eef3fa;
     --backgroundHeader: #abc4ff;
     --backgroundNav: #c1d3fe;
     --backgroundColor: #d7e3fc;
@@ -18,7 +18,6 @@
     margin: 0;
     padding: 0;
     text-decoration: none;
-    cursor: default;
 }
 
 body {
@@ -54,7 +53,6 @@ input {
     border-radius: 0.8rem;
     text-align: center;
     padding: 0.5rem;
-    font-size: 1rem;
     margin: 0.5em 0;
 }
 
@@ -63,7 +61,6 @@ button {
     border-radius: 0.8em;
     padding: 0.3em 1em;
     cursor: pointer;
-    font-size: 1rem;
     margin: 0.5em 0;
     font-family: var(--fontSansserif);
     transition-property: all;
@@ -72,6 +69,13 @@ button {
 button:hover {
     background-color: var(--backgroundHeader);
     color: var(--backgroundDefault);
+}
+
+textarea {
+    text-align: left;
+    padding: 5px;
+    font-size: 1rem;
+    font-family: var(--fontSansserif);
 }
 
 .link {
@@ -105,7 +109,6 @@ button:hover {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: center;
 }
 
 .grid {
@@ -177,6 +180,14 @@ button:hover {
     width: 5rem;
 }
 
+#app .container {
+    width: 100vw;
+    height: auto;
+    min-height: 68vh;
+    margin: 1rem 0;
+    position: relative;
+}
+
 #app .innerContainer {
     width: 80vw;
     min-height: 40vh;
@@ -185,6 +196,16 @@ button:hover {
     box-shadow: 3px 3px 15px 2px var(--boxShadow);
     margin: 1rem;
     position: relative;
+}
+#app .innerContainer h1 {
+    margin: 1rem;
+    font-family: var(--fontDefault);
+    font-size: xx-large;
+}
+
+#app .innerContainer h3 {
+    font-family: var(--fontDefault);
+    margin: 1rem;
 }
 
 /************** NAV ***************/
@@ -220,13 +241,6 @@ button:hover {
 
 /************** UPLAODER ***************/
 
-#app .container {
-    width: 100vw;
-    height: auto;
-    min-height: 68vh;
-    margin: 1rem 0;
-    position: relative;
-}
 #uploader * {
     margin: 1rem;
     font-family: var(--fontSansserif);
@@ -235,7 +249,6 @@ button:hover {
 #uploader {
     width: auto;
     height: auto;
-    font-family: var(--fontSansserif);
     border-radius: 1rem;
     background-color: var(--backgroundColor);
     box-shadow: 3px 3px 15px 2px var(--boxShadow);
@@ -254,8 +267,7 @@ button:hover {
 }
 
 #bioText,
-#bioText p,
-#bioText textarea {
+#bioText p {
     font-family: var(--fontSansserif);
 }
 
@@ -265,32 +277,29 @@ button:hover {
     text-decoration: underline;
 }
 
-#bioText textarea {
-    text-align: left;
-    padding: 5px;
-    font-size: 1em;
-}
-
 /************** FIND USERS ***************/
-
-#findUsers h1,
-#findUsers li {
-    margin: 1rem;
-}
-
-#findUsers li {
-    list-style-type: none;
-}
 
 #findUsers * {
     font-family: var(--fontSansserif);
 }
 
-#findUsers li img {
+#findUsers input {
+    font-family: var(--fontDefault);
+}
+
+#findUsers img {
     height: 7rem;
     width: 7rem;
     object-fit: cover;
     border-radius: 1rem;
+}
+
+#findUsers .user {
+    margin: 1rem;
+}
+
+#findUsers .grid {
+    width: 90%;
 }
 
 /************** FRIENDS ***************/
@@ -299,8 +308,8 @@ button:hover {
     font-family: var(--fontSansserif);
 }
 
-#friendsAndWannabes h1 {
-    margin: 1rem;
+#friendsAndWannabes button {
+    font-size: small;
 }
 
 #friendsAndWannabes img {
@@ -314,12 +323,37 @@ button:hover {
     margin: 1rem;
 }
 
+/************** CHAT ***************/
+#chatMessages {
+    height: 15rem;
+    overflow: scroll;
+    background-color: var(--backgroundDefault);
+    margin: 1rem;
+    flex-direction: column-reverse;
+}
+
+#chatMessages div {
+    width: 100%;
+    border-bottom: 1px solid var(--borderColor);
+}
+
+#chatMessages p {
+    text-align: left;
+    margin: 2rem 0 0.5rem 1rem;
+    font-family: var(--fontSansserif);
+}
+
+#chatMessages .time {
+    font-size: small;
+}
+
 /************** FOOTER ***************/
 
 #app footer {
     width: 100vw;
     height: 2rem;
     background-color: var(--backgroundFooter);
+    justify-content: center;
 }
 
 #app footer * {
