--- a/client/style.css
+++ b/client/style.css
@@ -333,18 +333,35 @@ textarea {
 }
 
 #chatMessages div {
-    width: 100%;
+    width: 95%;
     border-bottom: 1px solid var(--borderColor);
 }
 
-#chatMessages p {
+#chatMessages * {
     text-align: left;
-    margin: 2rem 0 0.5rem 1rem;
+    margin: 0.5rem;
     font-family: var(--fontSansserif);
+}
+
+#chatMessages img {
+    height: 5rem;
+    width: 5rem;
+    object-fit: cover;
+    font-weight: bold;
+    border-radius: 1rem;
 }
 
 #chatMessages .time {
     font-size: small;
+}
+
+#chatMessages .name {
+    text-decoration: underline;
+    font-weight: bold;
+}
+
+#chatMessages .message {
+    justify-content: center;
 }
 
 /************** FOOTER ***************/
